// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner Matches snapshot (desktop) 1`] = `
.c0 {
  background-color: #FFB302;
  color: #000000;
  font-size: 0.75rem;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  line-height: 1.25rem;
  padding: var(--spacing-2x) var(--spacing-6x);
  position: relative;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-2x);
}

.c2 p {
  margin: 0;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  color: currentColor;
  cursor: pointer;
  height: 32px;
  border: 1px transparent solid;
  padding: 0;
  position: absolute;
  right: 6px;
  top: 9px;
  width: 32px;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  border: 1px solid #0080A5;
}

<div
  class="c0"
  data-testid="container"
  role="alert"
>
  <button
    aria-label="Close"
    class="c1"
    data-testid="closeButton"
    type="button"
  >
    <svg
      color="currentColor"
      focusable="false"
      height="20"
      width="20"
    />
  </button>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      width="20"
    />
    <p>
      WARNING! Lorem ipsum
    </p>
  </div>
</div>
`;

exports[`Banner Matches snapshot (mobile) 1`] = `
.c0 {
  background-color: #A40C2E;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-7x) var(--spacing-3x) var(--spacing-2x);
  position: relative;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-2x);
}

.c2 p {
  margin: 0;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  color: currentColor;
  cursor: pointer;
  height: 48px;
  border: 1px transparent solid;
  padding: 0;
  position: absolute;
  right: 0;
  top: 9px;
  width: 48px;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  border: 1px solid #0080A5;
}

<div
  class="c0"
  data-testid="container"
  role="alert"
>
  <button
    aria-label="Close"
    class="c1"
    data-testid="closeButton"
    type="button"
  >
    <svg
      color="currentColor"
      focusable="false"
      height="28"
      width="28"
    />
  </button>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="24"
      width="24"
    />
    <p>
      ERROR! Lorem ipsum
    </p>
  </div>
</div>
`;
